--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -25,7 +25,7 @@ packages/image_picker/**                                 @tarrinneal
 packages/interactive_media_ads/**                        @bparrishMines
 packages/in_app_purchase/**                              @bparrishMines
 packages/local_auth/**                                   @stuartmorgan
-packages/metrics_center/**                               @keyonghan
+packages/metrics_center/**                               @christopherfujino
 packages/multicast_dns/**                                @jmagman
 packages/palette_generator/**                            @gspencergoog
 packages/path_provider/**                                @stuartmorgan
