Remove CODEOWNER for google_sign_in_ios and image_picker_ios (#6891)
Redistribute iOS CODEOWNERs.

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -85,8 +85,8 @@ packages/camera/camera_avfoundation/**                   @hellohuanlin
 packages/file_selector/file_selector_ios/**              @jmagman
 packages/file_selector/file_selector_macos/**            @jmagman
 packages/google_maps_flutter/google_maps_flutter_ios/**  @cbracken
-packages/google_sign_in/google_sign_in_ios/**            @vashworth @loic-sharma
-packages/image_picker/image_picker_ios/**                @vashworth @loic-sharma
+packages/google_sign_in/google_sign_in_ios/**            @loic-sharma
+packages/image_picker/image_picker_ios/**                @loic-sharma
 packages/image_picker/image_picker_macos/**              @jmagman
 packages/in_app_purchase/in_app_purchase_storekit/**     @louisehsu
 packages/ios_platform_images/**                          @jmagman
