--- a/packages/video_player/video_player/pubspec.yaml
+++ b/packages/video_player/video_player/pubspec.yaml
@@ -3,7 +3,7 @@ description: Flutter plugin for displaying inline video with other Flutter
   widgets on Android, iOS, and web.
 repository: https://github.com/flutter/packages/tree/main/packages/video_player/video_player
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+video_player%22
-version: 2.8.7
+version: 2.9.0
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
@@ -27,7 +27,7 @@ dependencies:
   html: ^0.15.0
   video_player_android: ^2.3.5
   video_player_avfoundation: ^2.5.6
-  video_player_platform_interface: ">=6.1.0 <7.0.0"
+  video_player_platform_interface: ^6.2.0
   video_player_web: ^2.0.0
 
 dev_dependencies:
