--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -63,9 +63,8 @@ packages/video_player/video_player_web/**                @ditman
 packages/webview_flutter/webview_flutter_web/**          @ditman
 
 # - Android
-# TODO(matanlurey): Remove @matanlurey after https://github.com/flutter/flutter/issues/151018.
-packages/camera/camera_android/**                        @camsim99 @matanlurey
-packages/camera/camera_android_camerax/**                @camsim99 @matanlurey
+packages/camera/camera_android/**                        @camsim99
+packages/camera/camera_android_camerax/**                @camsim99
 packages/espresso/**                                     @reidbaker
 packages/file_selector/file_selector_android/**          @gmackall
 packages/flutter_plugin_android_lifecycle/**             @reidbaker
