--- a/packages/file_selector/file_selector_android/pubspec.yaml
+++ b/packages/file_selector/file_selector_android/pubspec.yaml
@@ -27,7 +27,7 @@ dev_dependencies:
   build_runner: ^2.1.4
   flutter_test:
     sdk: flutter
-  mockito: 5.4.4
+  mockito: ^5.4.4
   pigeon: ^9.2.4
 
 topics:
