--- a/packages/in_app_purchase/in_app_purchase_android/pubspec.yaml
+++ b/packages/in_app_purchase/in_app_purchase_android/pubspec.yaml
@@ -28,7 +28,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.3.1
-  mockito: 5.4.4
+  mockito: ^5.4.4
   pigeon: ^17.1.1
   test: ^1.16.0
 
