--- a/packages/interactive_media_ads/pubspec.yaml
+++ b/packages/interactive_media_ads/pubspec.yaml
@@ -30,7 +30,7 @@ dev_dependencies:
   build_runner: ^2.1.4
   flutter_test:
     sdk: flutter
-  mockito: 5.4.4
+  mockito: ^5.4.4
   pigeon: ^22.2.0
 
 topics:
