--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -28,7 +28,6 @@ packages/local_auth/**                                   @stuartmorgan
 packages/metrics_center/**                               @christopherfujino
 packages/multicast_dns/**                                @jmagman
 packages/palette_generator/**                            @gspencergoog
-packages/path_parsing/**                                 @domesticmouse
 packages/path_provider/**                                @stuartmorgan
 packages/pigeon/**                                       @tarrinneal
 packages/platform/**                                     @stuartmorgan
@@ -47,6 +46,7 @@ packages/webview_flutter/**                              @bparrishMines
 packages/xdg_directories/**                              @stuartmorgan
 third_party/packages/cupertino_icons/**                  @MitchellGoodwin
 third_party/packages/cupertino_icons/test/goldens/**     @LongCatIsLooong
+third_party/packages/path_parsing/**                     @domesticmouse
 
 # Plugin platform implementation rules. These should stay last, since the last
 # matching entry takes precedence.
